Fixes: NB#213057 - [TASK] Camera; §qtn_cam_whitebalance_fluorescent§ med. translation is truncated.
RevBy: TrustMe
Details: apply this patch again, as the libmeegotouch
one is working now.

--- a/base/meegotouch/libmeegotouchviews/style/mbuttoniconstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mbuttoniconstyle.css
@@ -29,6 +29,9 @@ MButtonIconStyle {
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 0;
+    
+    text-wrap-mode: nowrap;
+    text-eliding: true;
 }
 
 MButtonIconStyle:pressed {
